; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/stmicro/stmmac/extr_dwmac-meson8b.c_meson8b_set_phy_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/stmicro/stmmac/extr_dwmac-meson8b.c_meson8b_set_phy_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.meson8b_dwmac = type { i32, i32 }

@PRG_ETH0 = common dso_local global i32 0, align 4
@PRG_ETH0_RGMII_MODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"fail to set phy-mode %s\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.meson8b_dwmac*)* @meson8b_set_phy_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson8b_set_phy_mode(%struct.meson8b_dwmac* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.meson8b_dwmac*, align 8
  store %struct.meson8b_dwmac* %0, %struct.meson8b_dwmac** %3, align 8
  %4 = load %struct.meson8b_dwmac*, %struct.meson8b_dwmac** %3, align 8
  %5 = getelementptr inbounds %struct.meson8b_dwmac, %struct.meson8b_dwmac* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %18 [
    i32 132, label %7
    i32 130, label %7
    i32 131, label %7
    i32 129, label %7
    i32 128, label %13
  ]

7:                                                ; preds = %1, %1, %1, %1
  %8 = load %struct.meson8b_dwmac*, %struct.meson8b_dwmac** %3, align 8
  %9 = load i32, i32* @PRG_ETH0, align 4
  %10 = load i32, i32* @PRG_ETH0_RGMII_MODE, align 4
  %11 = load i32, i32* @PRG_ETH0_RGMII_MODE, align 4
  %12 = call i32 @meson8b_dwmac_mask_bits(%struct.meson8b_dwmac* %8, i32 %9, i32 %10, i32 %11)
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.meson8b_dwmac*, %struct.meson8b_dwmac** %3, align 8
  %15 = load i32, i32* @PRG_ETH0, align 4
  %16 = load i32, i32* @PRG_ETH0_RGMII_MODE, align 4
  %17 = call i32 @meson8b_dwmac_mask_bits(%struct.meson8b_dwmac* %14, i32 %15, i32 %16, i32 0)
  br label %29

18:                                               ; preds = %1
  %19 = load %struct.meson8b_dwmac*, %struct.meson8b_dwmac** %3, align 8
  %20 = getelementptr inbounds %struct.meson8b_dwmac, %struct.meson8b_dwmac* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.meson8b_dwmac*, %struct.meson8b_dwmac** %3, align 8
  %23 = getelementptr inbounds %struct.meson8b_dwmac, %struct.meson8b_dwmac* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @phy_modes(i32 %24)
  %26 = call i32 @dev_err(i32 %21, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %2, align 4
  br label %30

29:                                               ; preds = %13, %7
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %18
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @meson8b_dwmac_mask_bits(%struct.meson8b_dwmac*, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32) #1

declare dso_local i32 @phy_modes(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
